<resources>
    <string name="app_name">CollectionsApp</string>
    <string name="collections">Collections:</string>
    <string name="create_collection_string">Create new Collection</string>
    <string name="edit_name_string">Edit name</string>
    <string name="edit_password_string">Edit password</string>
    <string name="hidden_password_string">********</string>
    <string name="leave_account_string">Leave account</string>
    <string name="collections_search_string">Search collections</string>
    <string name="profile_string">Profile</string>
    <string name="my_collections_string">My collections</string>
    <string name="settings_string">Settings</string>
    <string name="to_main_string">Main</string>
</resources>