<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/collectionsSearch"
        android:title="@string/collections_search_string"
        app:showAsAction="never" />

    <item
        android:id="@+id/toMainButton"
        android:title="@string/to_main_string"
        app:showAsAction="never" />

    <item
        android:id="@+id/profileButton"
        android:title="@string/profile_string"
        app:showAsAction="never" />

    <item
        android:id="@+id/myCollectionsButton"
        android:title="@string/my_collections_string"
        app:showAsAction="never" />

    <item
        android:id="@+id/settingsButton"
        android:title="@string/settings_string"
        app:showAsAction="never" />
</menu>