<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TableRow>
            <TextView
                android:id="@+id/currentNameSettings"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />
            <Button
                android:id="@+id/editNameButton"
                android:text="@string/edit_name_string" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hidden_password_string"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />
            <Button
                android:id="@+id/editPasswordButton"
                android:text="@string/edit_password_string" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/leaveAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_account_string"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>